# actionable-recourse

./: main.py  pyproject.toml
examples/paper/: batch_model_training.py  demo_script_credit.py  demo_script_german.py  demo_script_givemecredit.py  initialize.py
examples/paper/data/credit/: credit_processing_script.py
examples/paper/data/german/: german_processing_script.py
examples/paper/data/givemecredit/: givemecredit_processing_script.py
recourse/: __init__.py  action_set.py  auditor.py  builder.py  cplex_helper.py  defaults.py  flipset.py  helper_functions.py  paths.py  print_recourse_audit_report.py
tests/: conftest.py  test_action_set.py  test_auditor.py  test_bounds.py  test_builder.py  test_flipset.py  test_solvers.py
